@@ -110,7 +110,7 @@ case $BYOBU_BACKEND in
 	tmux)
 		# Use 256 colors if possible
 		if $BYOBU_TEST tput >/dev/null; then
-			if [ "$(tput colors 2>/dev/null || echo 0)" = "256" ] || [ "$COLORTERM" = "gnome-terminal" ] || [ "$TERM" = "xterm" ] || [ "$TERM" = "xterm-256color" ]; then
+			if [ "$(tput colors 2>/dev/null || echo 0)" = "256" ] || [ "$COLORTERM" = "gnome-terminal" ] || [ "$TERM" = "xterm" ] || [ "$TERM" = "xterm-256color" ] || [ "$TERM" = "screen" ]; then
 				[ -z "$SCREEN_TERM" ] && SCREEN_TERM="-2"
 			fi
 		fi
