@@ -19,7 +19,7 @@
 #    You should have received a copy of the GNU General Public License
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-if command -v ccze >/dev/null 2>&1; then
+if which ccze >/dev/null 2>&1; then
 	tail -F $@ | ccze -A
 else
 	echo "ERROR: ccze not found, hint..." 1>&2
